# GravTraffic

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  portfolio_summary.html  project_summary.html  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_engines.py  bench_gravcore.py
docs/: API.md  DEPLOYMENT.md  PHYSICS.md
gravtraffic/: __init__.py
gravtraffic/agents/: __init__.py  intersection_agent.py  traffic_model.py  vehicle_agent.py
gravtraffic/api/: __init__.py  app.py
gravtraffic/core/: __init__.py  calibration.py  calibration_pure.py  calibration_unified.py  force_engine.py  force_engine_gpu.py  force_engine_numba.py  green_wave.py  integrator.py  mass_assigner.py  metrics.py  potential_field.py  quadtree.py  signal_optimizer.py  simulation.py
gravtraffic/network/: __init__.py  road_network.py
gravtraffic/scenarios/: rivoli.py
gravtraffic/validation/: __init__.py  emergence.py  fundamental_diagram.py  report.py  sensitivity.py
tests/: conftest.py  test_api.py  test_calibration_pure.py  test_calibration_unified.py  test_calibration_viability.py  test_corridor_rivoli.py  test_dynamic_vehicles.py  test_emergence.py  test_force_engine.py  test_force_engine_gpu.py  test_force_engine_numba.py  test_green_wave.py  test_integrator.py  test_intersection_agent.py  test_mass_assigner.py  test_metrics.py  test_potential_field.py  test_prediction.py  test_quadtree.py  test_road_network.py  test_signal_optimizer.py  test_simulation.py  test_traffic_model.py  test_validation.py  test_vehicle_agent.py
(+1 files in other folders)
