[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gravtraffic"
version = "0.2.0"
description = "Traffic flow simulator using Janus gravitational model"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "mesa>=3.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
]
viz = [
    "pydeck>=0.8",
]
gpu = [
    "cupy-cuda12x>=13.0",
]
accel = [
    "numba>=0.60",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "line-profiler>=4.1",
    "ruff>=0.2",
]

[tool.setuptools.package-data]
gravtraffic = ["api/static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    "N803",  # G_s, G, KE, PE are physics symbols, not snake_case variables
    "N806",  # Same for local variables (G_s_values, etc.)
    "N802",  # test_invalid_G_s_negative is a valid test name
]
